# drqueue

./: .gitignore  3delightsg.c  3delightsg.h  AUTHORS  COPYING  CREDITS  ChangeLog  DrQueueOnRails_requirements_check.rb  INSTALL  LICENSE  Makefile  Makefile.am  Makefile.in  NEWS  README  README.darwin  README.mentalray  README.python  README.shell_variables  README.windows  Revision  SConstruct  TODO  aftereffectssg.c  aftereffectssg.h  aqsissg.c  aqsissg.h  blendersg.c  blendersg.h  blockhost.c  bmrtsg.c  bmrtsg.h  bootstrap  cfgreader.c  cjob.c  common.c  common.h  communications.c  communications.h  compinfo.c  (+86 more)
CVSROOT/: modules  users
DrKeewee/: server
DrKeewee/cgi-bin/: drkeewee.cgi
DrQueueOnRails/: AUTHORS
DrQueueOnRails/config/: database.example  database.yml  database.yml.example  environment.rb  environment.rb.example  routes.rb
DrQueueOnRails/db/: schema.rb
DrQueueOnRails/lib/: jobscript_generators.rb
DrQueueOnRails/public/: disclaimer.html  maintenance.html
arch/: computer_info.c  computer_info.h  computer_status.c  computer_status.h
contrib/: install_dlls.sh  installer.ini  nsis2io.nsh  sendjob.blender.py
contrib/Gentoo/: drqueue-0.64.3.ebuild
contrib/MacOSX/: install_launchd.sh  org.drqueue.Slave.plist  org.drqueue.master.plist
contrib/XSI-Splash/: Makefile  Plugins.prj  Splash.cpp  Splash.dsp  Splash.prj  Splash.pws  Splash.vcproj
contrib/initscripts/: fedora.template
contrib/service-ipc/: ProjectInstaller.resx
contrib/service-master/: Servicer.resx  servicer.vbproj
contrib/service-slave/: ProjectInstaller.vb  Servicer.vb
contrib/windows/: build_services.sh  install_dlls.sh
db/: DB_CONFIG  __db.002  __db.003  __db.004  __db.005  changes  log.0000000001  nodes  revisions  uuids
diagrams/: DrQueue_Overview.dia
diagrams/outdated/: r_r_availjob.dia
drqman/: Makefile  Makefile.am  Makefile.in  SConscript  aclocal.m4  config.status  configure  configure.ac  drqm_autorefresh.c  drqm_autorefresh.h  drqm_common.c  drqm_common.h  drqm_computers.c  drqm_computers.h  drqm_config.h  drqm_cygwin.c  drqm_cygwin.h  drqm_globals.c  drqm_globals.h  drqm_info.c  drqm_info.h  drqm_jobs.c  drqm_jobs.h  drqm_jobs_3delight.c  drqm_jobs_3delight.h  drqm_jobs_aftereffects.c  drqm_jobs_aftereffects.h  drqm_jobs_aqsis.c  drqm_jobs_aqsis.h  drqm_jobs_blender.c  drqm_jobs_blender.h  drqm_jobs_bmrt.c  drqm_jobs_bmrt.h  drqm_jobs_common.h  drqm_jobs_jdd.c  drqm_jobs_jdd.h  drqm_jobs_lightwave.c  drqm_jobs_lightwave.h  drqm_jobs_luxrender.c  drqm_jobs_luxrender.h  (+32 more)
drqman/icons/: info_icon.xcf  job_icon.xcf  slave_icon.xcf
drqueue/: 3delightsg.c  3delightsg.h  CREDITS  ChangeLog  Makefile  README  README.windows  Revision  SConstruct  TODO  aftereffectssg.c  aqsissg.c  aqsissg.h  blendersg.c  blendersg.h  blockhost.c  bmrtsg.c  bmrtsg.h  cjob.c  common.c  common.h  communications.c  communications.h  compinfo.c  computer.c  computer.h  computer_info.c  computer_info.freebsd.c  computer_info.h  computer_info.irix.c  computer_info.linux.c  computer_info.osx.c  computer_status.c  computer_status.h  constants.h  database.c  database.h  drerrno.c  drerrno.h  drqueue.dia  (+38 more)
drqueue/arch/: computer_info.c  computer_info.h  computer_status.h
drqueue/contrib/: installer.nsi  service.cpp
drqueue/db/: __db.001  copies  representations  strings  transactions
drqueue/drqman/: Makefile  drqm_autorefresh.h  drqm_common.c  drqm_common.h  drqm_computers.c  drqm_computers.h  drqm_cygwin.c  drqm_info.c  drqm_info.h  drqm_jobs.c  drqm_jobs.h  drqm_jobs_3delight.c  drqm_jobs_aqsis.c  drqm_jobs_aqsis.h  drqm_jobs_blender.c  drqm_jobs_blender.h  drqm_jobs_bmrt.c  drqm_jobs_bmrt.h  drqm_jobs_common.h  drqm_jobs_jdd.c  drqm_jobs_jdd.h  drqm_jobs_lightwave.c  drqm_jobs_lightwave.h  drqm_jobs_maya.c  drqm_jobs_maya.h  drqm_jobs_mentalray.c  drqm_jobs_mentalray.h  drqm_jobs_pixie.c  drqm_jobs_pixie.h  drqm_jobs_shake.c  drqm_jobs_terragen.c  drqm_request.c  drqm_request.h  drqman.h  eeelogo.xpm  main.c  notebook.c  notebook.h  weasel.xpm
drqueue/etc/: 3delight.sg  aftereffects.sg  aqsis.sg  blender.sg  blenderblock.sg  bmrt.sg  drqman-windows.rc  drqman.rc  lightwave.sg  master.conf  maya.sg  mayablock.sg  mentalray.sg  nuke.sg  pixie.sg  shake.sg  slave.conf  terragen.sg
drqueue/svn-scripts/: build_release.sh  (+2 more)
etc/: 3delight.sg  3delight_sg.py  3dsmax.sg  3dsmax_sg.py  aftereffects.sg  aftereffects_sg.py  aqsis.sg  aqsis_sg.py  blender.sg  blender_image.sg  blender_region_rendering.py  blender_same_directory.py  blender_sg.py  blenderlux.sg  bmrt.sg  bmrt_sg.py  cinema4d.sg  cinema4d_image.sg  cinema4d_sg.py  drqman.conf  drqman.rc  general.sg  general_sg.py  lightwave.sg  lightwave_sg.py  luxrender.sg  luxrender_sg.py  mantra.sg  mantra_sg.py  master.conf  maya.sg  maya_sg.py  mayablock.sg  mentalray.sg  mentalray_image.sg  mentalray_sg.py  nuke_sg.py  pixie.sg  pixie_sg.py  shake.sg  (+11 more)
examples/: example1.py  example3.py  example5.py
libdrqueue/: 3delightsg.c  3delightsg.h  3dsmaxsg.c  3dsmaxsg.h  Makefile.am  Makefile.in  SConscript  aftereffectssg.c  aftereffectssg.h  aqsissg.c  aqsissg.h  blenderluxsg.c  blenderluxsg.h  blendersg.c  blendersg.h  bmrtsg.c  bmrtsg.h  cinema4dsg.c  cinema4dsg.h  common.c  common.h  communications.c  communications.h  computer.c  computer.h  computer_info.c  computer_info.cygwin.h  computer_info.freebsd.h  computer_info.h  computer_info.irix.h  computer_info.linux.h  computer_info.osx.h  computer_pool.c  computer_pool.h  computer_status.c  computer_status.h  config.c  config.h  config.status  configure  (+56 more)
libdrqueue_python/: common.py  communications.py  computer.py  computer_info.py  computer_limits.py  computer_pool.py  computer_status.py  libdrqueue.py  task.py
python/: MANIFEST.in  PKG-INFO  README  README.darwin  SConscript  SConstruct  drqueue.i  drqueue_base_tools.py  example1.py  python_leak_test.py  setup.cfg  setup.py
ruby/: example1.rb  example2.rb  example3.rb  example4.rb  example5.rb  extconf.rb  libdrqueue.i_ruby  libdrqueue_ruby.i
ruby-python/: installer.rb
svn-scripts/: build_release.sh  mkrelease_tag  svn2cl.pl
(+147 files in other folders)
