lib_LIBRARIES = libdrqueue.a
libdrqueue_a_SOURCES = 3delightsg.c 3delightsg.h aftereffectssg.c aftereffectssg.h aqsissg.c aqsissg.h blendersg.c blendersg.h bmrtsg.c bmrtsg.h common.c common.h communications.c communications.h computer.c computer.h computer_info.c computer_info.cygwin.h computer_info.freebsd.h computer_info.h computer_info.irix.h computer_info.linux.h computer_info.osx.h computer_pool.c computer_pool.h computer_status.c computer_status.h config.c config.h constants.h database.c database.h drerrno.c drerrno.h envvars.c envvars.h generalsg.c generalsg.h job.c job.h jobscript.c jobscript.h libdrqueue.h lightwavesg.c lightwavesg.h list.c list.h logger.c logger.h mantrasg.c mantrasg.h mayasg.c mayasg.h mentalraysg.c mentalraysg.h nukesg.c nukesg.h pixiesg.c pixiesg.h pointer.c pointer.h request.c request_codes.h request_errors.h request.h semaphores.c semaphores.h shakesg.c shakesg.h task.c task.h terragensg.c terragensg.h turtlesg.c turtlesg.h xsisg.c xsisg.h
