AM_CPPFLAGS = -I$(srcdir)/libdrqueue -D_GNU_SOURCE -D_NO_COMPUTER_POOL_SEMAPHORES -D_NO_COMPUTER_SEMAPHORES @my_sys@
INCLUDES = @INCLTDL@ 
lib_LTLIBRARIES = libdrqueue.la
libdrqueue_la_SOURCES = 3delightsg.c aftereffectssg.c aqsissg.c blendersg.c bmrtsg.c common.c communications.c computer.c computer_info.c computer_pool.c computer_status.c config.c database.c drerrno.c envvars.c generalsg.c job.c jobscript.c lightwavesg.c list.c logger.c mantrasg.c mayasg.c mentalraysg.c nukesg.c pixiesg.c pointer.c request.c semaphores.c shakesg.c task.c terragensg.c turtlesg.c xsisg.c
libdrqueue_la_LDFLAGS = -static
libdrqueue_la_LIBADD = @LIBLTDL@ @LIBADD_DL@
