AM_CPPFLAGS = -I$(srcdir)/libdrqueue -D_GNU_SOURCE -D_NO_COMPUTER_POOL_SEMAPHORES -D_NO_COMPUTER_SEMAPHORES @my_sys@
lib_LTLIBRARIES = libdrqueue.la
libdrqueue_la_SOURCES = 3delightsg.c aftereffectssg.c aqsissg.c blendersg.c bmrtsg.c common.c communications.c computer.c computer_info.c computer_pool.c computer_status.c config.c database.c drerrno.c envvars.c generalsg.c job.c jobscript.c lightwavesg.c list.c logger.c mantrasg.c mayasg.c mentalraysg.c nukesg.c pixiesg.c pointer.c request.c semaphores.c shakesg.c task.c terragensg.c turtlesg.c xsisg.c 3delightsg.h aftereffectssg.h aqsissg.h blendersg.h bmrtsg.h common.h communications.h computer.h computer_info.cygwin.h computer_info.freebsd.h computer_info.h computer_info.irix.h computer_info.linux.h computer_info.osx.h computer_pool.h computer_status.h config.h constants.h database.h drerrno.h envvars.h generalsg.h job.h jobscript.h libdrqueue.h lightwavesg.h list.h logger.h mantrasg.h mayasg.h mentalraysg.h nukesg.h pixiesg.h pointer.h request.h request_codes.h request_errors.h semaphores.h shakesg.h slavedb.h task.h terragensg.h turtlesg.h xsisg.h
